tests/snapshots/bib_parser__concatenation.snap
---
source: tests/bib_parser.rs
expression: "tree(r#\"@string{x = \"a\" # foo # {b}}\"#)"
---
ROOT@0..28
  STRING_ENTRY@0..28
    AT@0..1 "@"
    ENTRY_TYPE@1..7
      WORD@1..7 "string"
    L_BRACE@7..8 "{"
    FIELD@8..27
      FIELD_NAME@8..9
        WORD@8..9 "x"
      WHITESPACE@9..10 " "
      EQ@10..11 "="
      WHITESPACE@11..12 " "
      VALUE@12..27
        QUOTED@12..15
          QUOTE@12..13 "\""
          WORD@13..14 "a"
          QUOTE@14..15 "\""
        WHITESPACE@15..16 " "
        HASH@16..17 "#"
        WHITESPACE@17..18 " "
        LITERAL@18..21
          WORD@18..21 "foo"
        WHITESPACE@21..22 " "
        HASH@22..23 "#"
        WHITESPACE@23..24 " "
        BRACE_GROUP@24..27
          L_BRACE@24..25 "{"
          WORD@25..26 "b"
          R_BRACE@26..27 "}"
    R_BRACE@27..28 "}"
