tests/snapshots/bib_parser__junk_between_entries.snap
---
source: tests/bib_parser.rs
expression: "tree(\"leading junk\\n@misc{a}\\n\\nsome notes\\n@misc{b}\\n\")"
---
ROOT@0..43
  JUNK@0..13
    WORD@0..7 "leading"
    WHITESPACE@7..8 " "
    WORD@8..12 "junk"
    NEWLINE@12..13 "\n"
  ENTRY@13..21
    AT@13..14 "@"
    ENTRY_TYPE@14..18
      WORD@14..18 "misc"
    L_BRACE@18..19 "{"
    KEY@19..20
      WORD@19..20 "a"
    R_BRACE@20..21 "}"
  NEWLINE@21..22 "\n"
  NEWLINE@22..23 "\n"
  JUNK@23..34
    WORD@23..27 "some"
    WHITESPACE@27..28 " "
    WORD@28..33 "notes"
    NEWLINE@33..34 "\n"
  ENTRY@34..42
    AT@34..35 "@"
    ENTRY_TYPE@35..39
      WORD@35..39 "misc"
    L_BRACE@39..40 "{"
    KEY@40..41
      WORD@40..41 "b"
    R_BRACE@41..42 "}"
  NEWLINE@42..43 "\n"
