tests/snapshots/bib_parser__stray_at_starts_new_entry.snap
---
source: tests/bib_parser.rs
expression: "tree(\"@misc{a, title = {x}\\n@misc{b}\")"
---
ROOT@0..29
  ENTRY@0..21
    AT@0..1 "@"
    ENTRY_TYPE@1..5
      WORD@1..5 "misc"
    L_BRACE@5..6 "{"
    KEY@6..7
      WORD@6..7 "a"
    COMMA@7..8 ","
    WHITESPACE@8..9 " "
    FIELD@9..20
      FIELD_NAME@9..14
        WORD@9..14 "title"
      WHITESPACE@14..15 " "
      EQ@15..16 "="
      WHITESPACE@16..17 " "
      VALUE@17..20
        BRACE_GROUP@17..20
          L_BRACE@17..18 "{"
          WORD@18..19 "x"
          R_BRACE@19..20 "}"
    NEWLINE@20..21 "\n"
  ENTRY@21..29
    AT@21..22 "@"
    ENTRY_TYPE@22..26
      WORD@22..26 "misc"
    L_BRACE@26..27 "{"
    KEY@27..28
      WORD@27..28 "b"
    R_BRACE@28..29 "}"
error @21..22: unterminated entry
